add task that builds python package for java connectors